Another screen added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img src="Softasium.png" alt="">
+            <img src="logo/Softasium.png" alt="">
             <ul>
                 <li class="E"><a href="#" class="active">About</a></li>
                 <li class="E"><a href="#portfolio-loc">Portfolio</a></li>
@@ -82,23 +82,23 @@
             </div>
 
             <div class="skill-card">
-                <img src="vs.png" alt="">
+                <img src="logo/vs.png" alt="">
                 <h2>Android Studio</h2>
             </div>
             <div class="skill-card">
-                <img src="pngwing.com (2).png" alt="">
+                <img src="logo/pngwing.com (2).png" alt="">
                 <h2>Vscode</h2>
             </div>
             <div class="skill-card">
-                <img src="pngwing.com (1).png" alt="">
+                <img src="logo/pngwing.com (1).png" alt="">
                 <h2>Xamarin</h2>
             </div>
             <div class="skill-card">
-                <img src="pngegg.png" alt="">
+                <img src="logo/pngegg.png" alt="">
                 <h2>.Netframework</h2>
             </div>
             <div class="skill-card">
-                <img src="pngwing.com.png" alt="">
+                <img src="logo/pngwing.com.png" alt="">
                 <h2>C++</h2>
             </div>
         </div>
@@ -107,59 +107,59 @@
         <h1>Portfolio</h1>
         <div class="portfolio-cards">
             <div class="portfolio-card">
-                <img src="IMG-20231024-WA0003.jpg" alt="">
+                <img src="logo/a6.png" alt="">
                 <div class="overlay">
                     <h3>khadija Qomney</h3>
                     <p>Instructor Consultant Grapic Designer</p>
-                    <a href="indexx.html"><button>See More -></button></a>
+                    <a href="indexa.html"><button>See More -></button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/81/7c/fd/817cfdb1-1197-fc78-cf64-fa496bdffce5/AppIcon-1x_U007emarketing-0-7-0-85-220.png/1200x630wa.png" alt="">
+                <img src="logo/l6.png" alt="">
                 <div class="overlay">
                     <h3>Success Airlines</h3>
                     <p>Success Airlines App is an educational tool for parents that teaches children many of the things
                         they should be taught at school but are not. A resource, we support busy parents by introducing
                         their children to success and we guide them on the right path by providing kids with invaluable
                         life lessons.</p>
-                    <button>See More -></button>
+                        <a href="indexl.html"><button>See More -></button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="https://play-lh.googleusercontent.com/Z7dwLDlM6HOLLCFT1opsagM5tz-4eBG3D-XgRb5z8QSiF1Z1JjhCITcfKWQPewy3S6s" alt="">
+                <img src="logo/ac6.png" alt="">
                 <div class="overlay">
                     <h3>Development Central</h3>
                     <p>Development Central is a platform that provides high quality private sport, education and music
                         classes. Bringing the best coaches and teachers in Dubai together in one central booking app,
                         making it easier than ever to book your child’s activities. Giving you access to book a variety
                         of 23 activities that will cater to your availability and your needs.</p>
-                    <button>See More -></button>
+                        <a href="indexac.html"><button>See More -></button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="https://play-lh.googleusercontent.com/5YDx4CCmznIg32u-dCZ61hE-KqKLWfLce92iKksPeH2ENYTvh8mXKqcOdV5Hnmu1UA=w240-h480-rw" alt="">
+                <img src="logo/o6.png" alt="">
                 <div class="overlay">
                     <h3>Omni</h3>
                     <p>Looking for a one-stop solution for all your hair and beauty needs? Look no further! Introducing
                         the ultimate marketplace and appointment booking app that is designed to simplify your life.
                         Whether you're a product seller or buyer, or in need of a new haircut, this app has everything
                         you need in one place</p>
-                    <button>See More -></button>
+                        <a href="indexo.html"><button>See More -></button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="m.png" alt="">
+                <img src="logo/mv.png" alt="">
                 <div class="overlay">
                     <h3>Mvuala</h3>
                     <p>Mvuala App is an application that focuses on short videos uploading in many areas such as:
                         sports, entertainment, music, history, knowledge, and much more. To our Users and partners, we
                         express our gratitude for choosing us as your destination and we wish you nothing but the very
                         best</p>
-                    <button>See More -></button>
+                        <a href="indexmv.html"><button>See More -></button></a>
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="unnamed.png" alt="">
+                <img src="logo/ca.png" alt="">
                 <div class="overlay">
                     <h3>Casshey</h3>
                     <p>Users can create a geolocated or remote Casshey Raffle for any live sport or entertainment event
@@ -170,14 +170,14 @@
                 </div>
             </div>
             <div class="portfolio-cardss" >
-                <img src="https://www.freeiconspng.com/uploads/honda-motorcycles-logo-11.png" alt="">
+                <img src="logo/h6.png" alt="">
                 <div class="overlay">
                     <h3>Honda</h3>
                     <p>Users can create a geolocated or remote Casshey Raffle for any live sport or entertainment event
                         and share it on their social media with friends, teams, fan groups, neighbors, etc. Users buy
                         raffle tickets and a random winner is selected who will win 80% of the total raffle prize amount
                         up to a specific maximum prize</p>
-                    <button>See More -></button>
+                        <a href="indexh.html"><button>See More -></button></a>
                 </div>
                 </div>
         </div>
